Bug#41713 Using two management servers does not work